--- a/blog/templates/account.html
+++ b/blog/templates/account.html
@@ -1,13 +1,14 @@
-{% extends 'base.html '%}
+{% extends 'base.html' %}
 {% block content %}
     <div class="jumbotron">
         <div align='center'>
             <h1>Account {{current_user.username}}</h1>
-            <img align='center' src="{{url_for('static', filename='profile_pics/' + current_user.profile_image)}}">
+            <img align='center' src="{{url_for('static', filename='profile_pics/' + current_user.profile_img)}}">
         </div>
 
         <div class="container">
-            <form method='POST'>
+            <!-- Encoding Type (enctype) and action are needed when uploading different file types-->
+            <form method="POST" action="" enctype="multipart/form-data">
 
                 <!-- Implementing Bootstrap Form component -->
                 
@@ -21,13 +22,13 @@
                 </div>
 
                 <div class="form-group">
-                    {{form.email.label(class="form-group")}
+                    {{form.email.label(class="form-group")}}
                     {{form.email(class="form-control")}}
                 </div>
 
                 <div class="form-group">
                     {{form.picture.label(class="form-group")}}
-                    {{form.picture(class="form-control")}}
+                    {{form.picture(class="form-control-file")}}
                 </div>
 
                 <div class="form-group">
