--- a/blog/templates/account.html
+++ b/blog/templates/account.html
@@ -3,7 +3,7 @@
     <div class="jumbotron">
         <div align='center'>
             <h1>Account {{current_user.username}}</h1>
-            <img align='center' src="{{url_for('static', filename='profile_pics/' + current_user.profile_img)}}">
+            <img align='center' src="{{url_for('static', filename='profile_pics/' + current_user.profile_image)}}">
         </div>
 
         <div class="container">
