--- a/blog/templates/user_blog_posts.html
+++ b/blog/templates/user_blog_posts.html
@@ -4,7 +4,7 @@
     <div class="jumbotron">
         <div align='center'>
             <h1>User {{user.username}}</h1>
-            <img src="{{url_for('static', filename='profile_pics/' + user.profile_img)}}">
+            <img src="{{url_for('static', filename='profile_pics/' + user.profile_image)}}">
 
         </div>
     </div>
