--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="{{url_for('core.info')}}">About </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Create Post </a>
+                    <a class="nav-link" href="{{url_for('blog_posts.create_post')}}">Create Post </a>
                 </li>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
